src/test/deca/context/valid/convFloat.deca
{ int x = 1; float y = 2.5; println(y-x);}