src/test/deca/context/invalid/ReadFloat_inst.deca
//Test pour readfloat

//Resultat: 

{
    boolean x = readFloat();
    println(0.5*(x*x)) ; 
}